edit all drafts

--- a/content/uses.njk
+++ b/content/uses.njk
@@ -7,10 +7,35 @@ eleventyNavigation:
 
 <h1>Uses</h1>
 
-I've always loved the idea of showing off what tools you use often, or ones you really appreciate.
+I've always loved the idea of showing off what tools/apps/anything that you use often, or things you really appreciate.
 
 Check out other people's uses pages at <a href="https://uses.tech/">uses.tech</a>.
 
 <h2>Software</h2>
 
+<h3>Code Editors</h3>
+<ol>
+	<li>Sublime Text</li>
+	<li>Neovim</li>
+	<li>VSCode</li>
+	<li>Nova (Version 10)</li>
+</ol>
+
+<h3>Others</h3>
+<ul>
+	<li><a href="https://cleanshot.com/">CleanShot X</a> for screenshots & recordings.
+	<li><a href="https://kapeli.com/dash">Dash</a> for documentation, and learning. </li>
+	<li>Sublime Merge as my diff checker & some Git operations.</li>
+	<li>Firefox as my browser.</li>
+	<li><a href="https://reederapp.com/">Reeder 5</a> as my RSS reader.</li>
+	<li><a href="https://obsidian.md/">Obsidian</a> as my note taking app.</li>
+	<li>Mostly stock iTerm with some random theme.</li>
+	<li><a href="https://tryklack.com/">Klack</a> as my feel good app.</li>
+</ul>
+
 <h2>Hardware</h2>
+
+<ul>
+	<li>MacBook Air</li>
+	<li></li>
+</ul>
