add mastodon link

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -32,6 +32,7 @@
 		<style>{% getBundle "css" %}</style>
 	</head>
 	<body>
+		<a rel="me" href="https://famichiki.jp/@slims" class="visually-hidden">Mastodon</a>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
